--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=9900
+server.port=9000
 spring.jpa.open-in-view=true
+# springdoc.swagger-ui.config-url=http://localhost:9900/swagger-ui/index.html
